[tool.poetry]
name = "uniquedict"
version = "0.1.0"
description = ""
authors = ["Sekou Kone (sekone) <sekone@cisco.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-env = "*"
pytest-cov = "*"
pylint = "*"
black = "*"
isort = "*"
flake8 = "*"
bandit = "*"
respx = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.pylint.messages_control]
max-line-length = 79
extension-pkg-whitelist = "pydantic"
disable = [
  "too-many-locals",
  "duplicate-code",
  "missing-module-docstring",
  "missing-docstring",
  "unused-argument",
  "no-value-for-parameter",
  "no-member",
  "no-else-return",
  "no-self-argument",
  "line-too-long",
  "fixme",
  "invalid-name",
  "raise-missing-from",
  "protected-access",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  'broad-exception-caught',
  "too-many-ancestors",
]

[tool.black]
line-length = 79 # https://peps.python.org/pep-0008/
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \*.egg-info
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
